# audapolis

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  pytest.ini
.claude/: settings.local.json
app/: package-lock.json  package.json
app/main_process/: vite_main.config.js
app/src/: vite_renderer.config.js
app/src/components/: TitleBar.tsx
app/src/core/: ffmpeg.ts  otio.ts
app/src/pages/: About.tsx
app/src/server_api/: api.ts
app/src/util/: log.ts
doc/: testplan.md  user-guide-todo.md
doc/dev/: LICENSING.md  SYSTEM-PROMPT.md
doc/feat/: 00_implementation_overview.md  phase1_whisper_integration.md  phase2_diarization_upgrade.md
doc/user-guide/: README.md  advanced-editing.md  editor-basics.md  exporting.md  file-formats.md  getting-started.md  importing-transcribing.md  keyboard-shortcuts.md  model-management.md  playback-navigation.md  settings-preferences.md  troubleshooting.md
docs/feat/: phase2_diarization_upgrade.md  phase3_optimization.md  testing_strategy.md
server/: pyproject.toml  pytest.ini  run_tests.py  run_tests_debug.py  test_openai_whisper.py
server/app/: config.py  diarization_bridge.py  error_handling.py  hardware.py  huggingface_auth.py  main.py  models.py  modern_pipeline.py  performance_optimizer.py  post_processing.py  pyannote_engine.py  quality_metrics.py  tasks.py  transcribe.py  transcription_bridge.py  whisper_downloader.py  whisper_engine.py  whisper_models.yml
server/tests/: README.md  conftest.py  test_api_basic.py  test_engines.py  test_openai_whisper.py  test_transcription_api.py  validate_tests.py
